--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,15 @@
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.heading{
+    position: absolute;
+    top: 20%;
+    left: 10%;
+    right: 10%;
+}
+
 #container{
     width: 60%;
     height: 80%;
@@ -5,12 +17,18 @@
 	box-shadow: 0 0 3px rgba(0, 0, 0.1);
 }
 
+#container > img{
+    width: 100%;
+}
+
 .quizLogo{
-    width: 30%;
+    width: 90%;
+    position: relative;
+    margin: 10px auto;
 }
 
 header {
-    margin: 100px auto;
+    margin: 50px auto;
     text-align: center;
 }
 
@@ -29,18 +47,9 @@ button{
     background: #2980b9;
 }
 
-button > i{
-    padding: auto;
-    margin: auto;
-}
-
 .startButton{
     padding: auto;
     margin-top: 10px;
-}
-
-.questions{
-    width: 50%;
 }
 
 .ansOptions{
@@ -58,3 +67,33 @@ main{
         text-transform: uppercase;
         font-weight: normal
 }
+
+.generatedQuestion{
+        display: none;
+        width: 50%;
+}
+
+header > p{
+    display: none;
+}
+
+.questions{
+        justify-content: center;
+        margin-bottom: 20px;
+        font-size: 1em;
+        text-transform: uppercase;
+        font-weight: normal;
+}
+
+fieldset{
+    border: none;
+}
+    
+/* .correctFeedback {
+        display: block;
+        margin: 0 auto;
+        text-align: center;
+        background: linear-gradient(to bottom, rgba(245, 255, 255, 1) 0%, rgba(124, 225, 230, 1) 100%);
+        padding-top: 40px
+    }
+} */
