--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,7 +1,51 @@
-*{
-    margin: 0;
-    padding: 0;
+body{
+    font-family: 'Roboto', sans-serif;    
+    background: #E0EAFC;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     
 }
+
+main{
+    text-align: center;
+    margin-bottom: 20px;
+    font-size: 1em;
+    text-transform: uppercase;
+    font-weight: normal
+}
+
+header {
+    margin: 50px auto;
+    text-align: center;
+}
+
+header > p{
+    display: none;
+    background-color:#ccc8c6;
+    margin: 0;
+    padding: 10px 20px;
+    text-transform: uppercase;
+    font-size: 24px;
+    font-weight: normal;
+}
+
+button{
+    height: 4rem;
+    width: 10rem;
+    color: white;
+    background: #2980b9;
+}
+
+fieldset{
+    border: none;
+}
+
+fieldset > input{
+    padding: 20px 40px;
+}
+
+/* fieldset > label{
+    padding: 10px 20px;
+} */
 
 .heading{
     position: absolute;
@@ -12,36 +56,32 @@
 
 #container{
     width: 60%;
-    height: 60%;
+    height: 100%;
+    background: #e6edeb;
 	margin: 100px auto;
 	box-shadow: 0 0 3px rgba(0, 0, 0.1);
 }
 
 .quizLogo{
-    width: 60%;
-    height: 30%;
+    width: 100%;
+    height: 20%;
+    margin: 0;
+	padding: 0;
     position: relative;
-    margin: 10px auto;
 }
 
-header {
-    margin: 50px auto;
-    text-align: center;
+.displayedMessage{
+	line-height: 40px;
 }
 
-body{
-font-family: 'Roboto', sans-serif;    
-background: #2BC0E4;  /* fallback for old browsers */
-background: -webkit-linear-gradient(to right, #EAECC6, #2BC0E4);  /* Chrome 10-25, Safari 5.1-6 */
-background: linear-gradient(to right, #EAECC6, #2BC0E4); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 
-}
-
-button{
-    height: 4rem;
-    width: 10rem;
-    color: white;
-    background: #2980b9;
+/* Changes color of of button when its hovered on  */
+button:hover{
+    opacity: 1.0;
+    background: white;
+    color: #2980b9;
+	border: 3px solid #2980b9;
+	outline: none;
 }
 
 .startButton{
@@ -53,25 +93,8 @@ button{
     width: 80%;
 }
 
-.submitButton{
-
-}
-
-main{
-        text-align: center;
-        margin-bottom: 20px;
-        font-size: 1em;
-        text-transform: uppercase;
-        font-weight: normal
-}
-
 .generatedQuestion{
         display: none;
-        width: 50%;
-}
-
-header > p{
-    display: none;
 }
 
 .questions{
@@ -82,15 +105,5 @@ header > p{
         font-weight: normal;
 }
 
-fieldset{
-    border: none;
-}
+
     
-/* .correctFeedback {
-        display: block;
-        margin: 0 auto;
-        text-align: center;
-        background: linear-gradient(to bottom, rgba(245, 255, 255, 1) 0%, rgba(124, 225, 230, 1) 100%);
-        padding-top: 40px
-    }
-} */
