created wireframes for all pages

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -105,5 +105,9 @@ button:hover{
         font-weight: normal;
 }
 
-
+@media screen and (max-width: 568px) {
+    .quizLogo {
+        display: none;
+    }
+}
     
