--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,8 +1,9 @@
 body{
     font-family: 'Roboto', sans-serif;    
-    background: #E0EAFC;  /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #CFDEF3, #E0EAFC);  /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #CFDEF3, #E0EAFC); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */     
+    background: #304352;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #d7d2cc, #304352);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #d7d2cc, #304352); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+        
 }
 
 main{
@@ -44,9 +45,9 @@ fieldset > input{
 }
 
 div.answer{
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    margin: 0 auto;
+    width: 70%;
+    text-align: left;
 }
 
 .heading{
